@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor UI_COLOR_T4
skinparam classBackgroundColor UI_COLOR

class StatsPanel {
    - totalEmployeesLabel: Label
    - uniqueMetricLabel: Label
    - mostCommonMetricLabel: Label
    - employeesWithMetricLabel: Label
    - employeesWithoutMetricLabel: Label
    - distributionLabel: Label
    - statisticsService: StatisticsService
    - currentMode: StatisticsMode
    + StatsPanel(Logic)
    + setStatisticsMode(StatisticsMode)
    - refresh()
    - updateUi(Statistics)
}

class StatisticsService {
    - logic: Logic
    + StatisticsService(Logic)
    + getCurrentStatistics(): Statistics
}

class Statistics {
    - statisticsMode: StatisticsMode
    - totalEmployees: int
    - uniqueValueCount: int
    - mostCommonValue: String
    - employeesWithValue: int
    - employeesWithoutValue: int
    - valueDistribution: String
    + Statistics(List<Person>, StatisticsMode)
    + getTotalEmployees(): int
    + getUniqueValueCount(): int
    + getMostCommonValue(): String
    + getEmployeesWithValue(): int
    + getEmployeesWithoutValue(): int
    + getValueDistribution(): String
}

interface Logic <<interface>> {
    + getAddressBook(): ReadOnlyAddressBook
    + getFilteredPersonList(): ObservableList<Person>
}
interface ReadOnlyAddressBook <<interface>> {
    + getPersonList(): ObservableList<Person>
}

interface UiPart <<abstract>> {
    # getRoot(): Region
}


StatsPanel --|> UiPart
StatsPanel --> StatisticsService
StatsPanel --> StatisticsMode
StatisticsService --> Logic
StatisticsService --> Statistics
Statistics --> StatisticsMode
Logic --> ReadOnlyAddressBook
ReadOnlyAddressBook --> Person
note right of StatsPanel
StatsPanel supports three modes: TAG, DEPARTMENT, ROLE.
Labels and statistics update according to the selected mode.
Statistics are always computed from the full employee list (not filtered).
end note

@enduml
